Docker (#3)
* First Dockerfile version
* Add get report and get log endpoints
