# swagger/swagger.yaml
@@ -3,14 +3,14 @@ consumes:
 definitions:
   RawPayload:
     example:
-      check_id: 4563429d-ede0-40af-9cea-bc14124da0e9
+      check_id: 444d57fe-f85c-469f-997a-b62a14ab64a4
       raw: '{ raw : "BASE_64_FORMAT" }'
-      scan_id: 7f055e8b-a4f8-4cba-ac44-b840c3fd135e
-      scan_start_time: 2006-04-22T05:57:42Z
+      scan_id: 62676116-e940-48bc-8c2c-0902c527a1a4
+      scan_start_time: "2006-04-22T05:57:42Z"
     properties:
       check_id:
         description: Check UUID
-        example: 4563429d-ede0-40af-9cea-bc14124da0e9
+        example: 444d57fe-f85c-469f-997a-b62a14ab64a4
         format: uuid
         type: string
       raw:
@@ -20,27 +20,27 @@ definitions:
         type: string
       scan_id:
         description: Scan UUID
-        example: 7f055e8b-a4f8-4cba-ac44-b840c3fd135e
+        example: 62676116-e940-48bc-8c2c-0902c527a1a4
         format: uuid
         type: string
       scan_start_time:
         description: Scan start time
-        example: 2006-04-22T05:57:42Z
+        example: "2006-04-22T05:57:42Z"
         format: date-time
         type: string
     title: RawPayload
     type: object
   ReportPayload:
     example:
-      check_id: 160ed8bf-c724-473f-9c5a-9af6c56de8e5
+      check_id: f7201c56-42e7-47b9-9186-e04f66f48721
       report: '{ report : "{"report":"{\"check_id\":\"aabbccdd-abcd-0123-4567-abcdef012345\",
         .....}}" }'
-      scan_id: 5597e194-641d-4320-b536-d965333f2c6d
-      scan_start_time: 1995-08-24T02:02:26Z
+      scan_id: fde5d3fd-6c79-4195-a41c-34042c331aec
+      scan_start_time: "1995-08-24T02:02:26Z"
     properties:
       check_id:
         description: Check UUID
-        example: 160ed8bf-c724-473f-9c5a-9af6c56de8e5
+        example: f7201c56-42e7-47b9-9186-e04f66f48721
         format: uuid
         type: string
       report:
@@ -52,12 +52,12 @@ definitions:
         type: string
       scan_id:
         description: Scan UUID
-        example: 5597e194-641d-4320-b536-d965333f2c6d
+        example: fde5d3fd-6c79-4195-a41c-34042c331aec
         format: uuid
         type: string
       scan_start_time:
         description: Scan start time
-        example: 1995-08-24T02:02:26Z
+        example: "1995-08-24T02:02:26Z"
         format: date-time
         type: string
     title: ReportPayload
@@ -82,6 +82,38 @@ paths:
       summary: show healthcheck
       tags:
       - healthcheck
+  /v1/logs/{date}/{scan}/{check}:
+    get:
+      description: Download a log
+      operationId: Results#getLog
+      parameters:
+      - description: Check ID
+        in: path
+        name: check
+        required: true
+        type: string
+      - description: Report date
+        in: path
+        name: date
+        required: true
+        type: string
+      - description: Scan ID
+        in: path
+        name: scan
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      schemes:
+      - http
+      summary: getLog Results
+      tags:
+      - Results
   /v1/raw:
     post:
       description: Update the Raw of a Check
@@ -120,6 +152,38 @@ paths:
       schemes:
       - http
       summary: report Results
+      tags:
+      - Results
+  /v1/reports/{date}/{scan}/{check}:
+    get:
+      description: Download a report
+      operationId: Results#getReport
+      parameters:
+      - description: Check ID
+        in: path
+        name: check
+        required: true
+        type: string
+      - description: Report date
+        in: path
+        name: date
+        required: true
+        type: string
+      - description: Scan ID
+        in: path
+        name: scan
+        required: true
+        type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      schemes:
+      - http
+      summary: getReport Results
       tags:
       - Results
 produces:
